--- a/.github/workflows/test2_zip-lambda-qa_app_6d3df5e_env_0e8d7fe.yaml
+++ b/.github/workflows/test2_zip-lambda-qa_app_6d3df5e_env_0e8d7fe.yaml
@@ -412,11 +412,11 @@ jobs:
     name: build-and-zip-lambda
     steps:
       - name: 'Run :: Start'
-        run: |2-
+        run: |2
 
-              echo " Starting GitHub Action!" && 
-              echo "STEPS_CAN_PROCEED=true" >> $GITHUB_ENV
-              
+            echo " Starting GitHub Action!" && 
+            echo "STEPS_CAN_PROCEED=true" >> $GITHUB_ENV
+            
       - name: 'Run :: Checkout repository'
         uses: actions/checkout@v4
         with:
@@ -428,37 +428,37 @@ jobs:
         if: >-
           ${{ github.event.client_payload.commitId != null ||
           github.event.client_payload.branchName != null }}
-        run: |2-
+        run: |2
 
-              echo "Starting the checkout process..."
-              git fetch --all
-              if [ -n "$COMMIT_ID" ]; then
-                echo "Commit ID provided: $COMMIT_ID"
-                git checkout $COMMIT_ID || true
-                echo "Checked out to commit ID: $COMMIT_ID"
-              elif [ -n "$BRANCH_NAME" ]; then
-                echo "Branch name provided: $BRANCH_NAME"
-                git checkout $BRANCH_NAME || true
-                echo "Checked out to branch: $BRANCH_NAME"
+            echo "Starting the checkout process..."
+            git fetch --all
+            if [ -n "$COMMIT_ID" ]; then
+              echo "Commit ID provided: $COMMIT_ID"
+              git checkout $COMMIT_ID || true
+              echo "Checked out to commit ID: $COMMIT_ID"
+            elif [ -n "$BRANCH_NAME" ]; then
+              echo "Branch name provided: $BRANCH_NAME"
+              git checkout $BRANCH_NAME || true
+              echo "Checked out to branch: $BRANCH_NAME"
 
-                #Updating the commit Id
-                ACTUAL_COMMIT_ID=$(git rev-parse HEAD)
-                echo "Changing CommitId: $ACTUAL_COMMIT_ID"
-                echo "COMMIT_ID=$ACTUAL_COMMIT_ID" >> $GITHUB_ENV
-              else
-                echo "Skipping checkout..."
-              fi
-            
+              #Updating the commit Id
+              ACTUAL_COMMIT_ID=$(git rev-parse HEAD)
+              echo "Changing CommitId: $ACTUAL_COMMIT_ID"
+              echo "COMMIT_ID=$ACTUAL_COMMIT_ID" >> $GITHUB_ENV
+            else
+              echo "Skipping checkout..."
+            fi
+           
       - name: 'Run :: Decoding Secrets'
-        run: |2-
+        run: |2
 
-                if [ ! -x "$(command -v jq)" ]; then
-                  echo "jq not found, installing..."
-                  sudo apt-get update
-                  sudo apt-get install -y jq
-                fi
-                echo "${{ env.ENCODED_PIPELINE_SECRET }}" | base64 --decode | jq -r 'to_entries[] | "\(.key)=\(.value)"' | while read line; do echo "$line" >> $GITHUB_ENV; echo "::add-mask::${line#*=}"; done
-                
+            if [ ! -x "$(command -v jq)" ]; then
+              echo "jq not found, installing..."
+              sudo apt-get update
+              sudo apt-get install -y jq
+            fi
+            echo "${{ env.ENCODED_PIPELINE_SECRET }}" | base64 --decode | jq -r 'to_entries[] | "\(.key)=\(.value)"' | while read line; do echo "$line" >> $GITHUB_ENV; echo "::add-mask::${line#*=}"; done
+            
       - name: 'Run :: Configure AWS credentials'
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -476,67 +476,91 @@ jobs:
       - name: 'Run :: Build App'
         run: ${{ env.APP_BUILD_COMMAND }} && ls
       - name: 'Run :: Utilize Temp S3 Bucket'
-        run: |2-
+        run: |2
 
-              echo "Utilizing SkyU Temp S3 Bucket: skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}"
-              aws s3 mb s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }} || true
-              
+            echo "Utilizing SkyU Temp S3 Bucket: skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}"
+            aws s3 mb s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }} || true
+            
       - name: 'Run :: Deploy Lambda Function from Zip'
         env:
           RUN_ID: ${{ github.run_id }}
-        run: |2-
+        run: |2
 
-              echo "Copying ${{ env.BUILD_LIBRARIES_FOLDER }} into the ${{ env.APP_BUILD_FOLDER }} Folder"
-              cp -r ${{ env.BUILD_LIBRARIES_FOLDER }} ${{ env.APP_BUILD_FOLDER }}/${{ env.BUILD_LIBRARIES_FOLDER }}
+            echo "Copying ${{ env.BUILD_LIBRARIES_FOLDER }} into the ${{ env.APP_BUILD_FOLDER }} Folder"
+            cp -r ${{ env.BUILD_LIBRARIES_FOLDER }} ${{ env.APP_BUILD_FOLDER }}/${{ env.BUILD_LIBRARIES_FOLDER }}
 
-              echo "Navigating to the ${{ env.APP_BUILD_FOLDER }} Folder"
-              cd ${{ env.APP_BUILD_FOLDER }}
+            echo "Navigating to the ${{ env.APP_BUILD_FOLDER }} Folder"
+            cd ${{ env.APP_BUILD_FOLDER }}
 
-              echo "Listing Files"
-              ls 
+            echo "Listing Files"
+            ls 
 
-              echo "Zipping the Build Folder"
-              zip -rq lambda_function.zip .
+            echo "Zipping the Build Folder"
+            zip -rq lambda_function.zip .
 
-              echo "Syncing ZIP file to temporary S3 folder: s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}"
-              aws s3 cp lambda_function.zip s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}/$RUN_ID/
+            echo "Syncing ZIP file to temporary S3 folder: s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}"
+            aws s3 cp lambda_function.zip s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}/$RUN_ID/
 
-              if aws lambda get-function --function-name ${{ env.LAMBDA_FUNCTION_NAME }} >/dev/null 2>&1; then
-                echo "Updating existing Lambda function"
-                aws lambda update-function-code         --function-name ${{ env.LAMBDA_FUNCTION_NAME }}         --s3-bucket skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}         --s3-key $RUN_ID/lambda_function.zip         --region ${{ env.region }}
+            if aws lambda get-function --function-name ${{ env.LAMBDA_FUNCTION_NAME }} >/dev/null 2>&1; then
+              echo "Updating existing Lambda function"
+              aws lambda update-function-code \
+                --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
+                --s3-bucket skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }} \
+                --s3-key $RUN_ID/lambda_function.zip \
+                --region ${{ env.region }}
 
-                # Waiting for the function to update
-                timeout=300
-                start_time=$(date +%s)
-                while true; do
-                  echo "Checking if update can be applied"
-                  update_status=$(aws lambda get-function --function-name ${{ env.LAMBDA_FUNCTION_NAME }} --query 'Configuration.LastUpdateStatus' --output text)
-                  if [[ "$update_status" == "Successful" ]]; then
-                      echo "Update successful. Proceeding with configuration update."
-                      break
-                  else
-                      echo "Update in progress. LastUpdateStatus: $update_status"
-                      sleep 10
-                      
-                      current_time=$(date +%s)
-                      elapsed_time=$((current_time - start_time))
-                      if [ $elapsed_time -ge $timeout ]; then
-                          echo "Timeout reached. Exiting the loop."
-                          break
-                      fi
-                  fi
-                done
+              # Waiting for the function to update
+              timeout=300
+              start_time=$(date +%s)
+              while true; do
+                echo "Checking if update can be applied"
+                update_status=$(aws lambda get-function --function-name ${{ env.LAMBDA_FUNCTION_NAME }} --query 'Configuration.LastUpdateStatus' --output text)
+                if [[ "$update_status" == "Successful" ]]; then
+                    echo "Update successful. Proceeding with configuration update."
+                    break
+                else
+                    echo "Update in progress. LastUpdateStatus: $update_status"
+                    sleep 10
+                    
+                    current_time=$(date +%s)
+                    elapsed_time=$((current_time - start_time))
+                    if [ $elapsed_time -ge $timeout ]; then
+                        echo "Timeout reached. Exiting the loop."
+                        break
+                    fi
+                fi
+              done
 
-                echo "Updating Lambda function configuration"
-                aws lambda update-function-configuration         --function-name ${{ env.LAMBDA_FUNCTION_NAME }}         --description "${{ env.LAMBDA_FUNCTION_DESCRIPTION }}"         --timeout ${{ env.LAMBDA_FUNCTION_TIMEOUT }}         --memory-size ${{ env.LAMBDA_FUNCTION_MEMORY_SIZE }}         --role ${{ env.roleARN }}         --environment "Variables={BUILT_WITH=SKYU${{ env.LAMBDA_ENVIRONMENT_VARIABLES }}}"         --region ${{ env.region }}
-              else
-                echo "Creating new Lambda function"
-                aws lambda create-function         --function-name ${{ env.LAMBDA_FUNCTION_NAME }}         --description "${{ env.LAMBDA_FUNCTION_DESCRIPTION }}"         --timeout ${{ env.LAMBDA_FUNCTION_TIMEOUT }}         --memory-size ${{ env.LAMBDA_FUNCTION_MEMORY_SIZE }}         --ephemeral-storage "Size=${{ env.LAMBDA_FUNCTION_EPHEMERAL_STORAGE }}"         --runtime nodejs20.x         --role ${{ env.roleARN }}         --handler ${{ env.LAMBDA_FUNCTION_HANDLER }}         --code S3Bucket=skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }},S3Key=$RUN_ID/lambda_function.zip         --region ${{ env.region }}         --environment "Variables={BUILT_WITH=SKYU${{ env.LAMBDA_ENVIRONMENT_VARIABLES }}}"
-              fi
+              echo "Updating Lambda function configuration"
+              aws lambda update-function-configuration \
+                --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
+                --description "${{ env.LAMBDA_FUNCTION_DESCRIPTION }}" \
+                --timeout ${{ env.LAMBDA_FUNCTION_TIMEOUT }} \
+                --memory-size ${{ env.LAMBDA_FUNCTION_MEMORY_SIZE }} \
+                --role ${{ env.roleARN }} \
+                --environment "Variables={BUILT_WITH=SKYU${{ env.LAMBDA_ENVIRONMENT_VARIABLES }}}" \
+                --region ${{ env.region }} \
+                --vpc-config "SubnetIds=subnet-0f34fea17e6974ba7,subnet-061a39b1905c89685,SecurityGroupIds=sg-048449e6175755fcc" # <--- MODIFIED LINE
+            else
+              echo "Creating new Lambda function"
+              aws lambda create-function \
+                --function-name ${{ env.LAMMBDA_FUNCTION_NAME }} \
+                --description "${{ env.LAMBDA_FUNCTION_DESCRIPTION }}" \
+                --timeout ${{ env.LAMBDA_FUNCTION_TIMEOUT }} \
+                --memory-size ${{ env.LAMBDA_FUNCTION_MEMORY_SIZE }} \
+                --ephemeral-storage "Size=${{ env.LAMBDA_FUNCTION_EPHEMERAL_STORAGE }}" \
+                --runtime nodejs20.x \
+                --role ${{ env.roleARN }} \
+                --handler ${{ env.LAMBDA_FUNCTION_HANDLER }} \
+                --code S3Bucket=skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }},S3Key=$RUN_ID/lambda_function.zip \
+                --region ${{ env.region }} \
+                --environment "Variables={BUILT_WITH=SKYU${{ env.LAMBDA_ENVIRONMENT_VARIABLES }}}" \
+                --vpc-config "SubnetIds=subnet-0f34fea17e6974ba7,subnet-061a39b1905c89685,SecurityGroupIds=sg-048449e6175755fcc" # <--- MODIFIED LINE
+            fi
 
-              echo "Cleaning up temporary S3 folder"
-              aws s3 rm --recursive s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}/$RUN_ID
-              
+            echo "Cleaning up temporary S3 folder"
+            aws s3 rm --recursive s3://skyu-temp-${{ env.PIPELINE_ENVIRONMENT_LABEL }}-${{ env.PIPELINE_APPLICATION_ID_STRIPPED }}/$RUN_ID
+            
     needs:
       - _status_testing
     permissions: write-all
